base/frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rebom-frontend
  namespace: rebom
  labels:
    name: rebom-frontend
    app: rebom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rebom
      name: rebom-frontend
  template:
    metadata:
      labels:
        name: rebom-frontend
        app: rebom
    spec:
      containers:
      - name: rebom-frontend
        image: registry.relizahub.com/119a99d7-3992-4de4-91dc-395c70272e93-public/rebom-frontend
        ports:
        - containerPort: 80
