base/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rebom-frontend-service
  namespace: rebom
  labels:
    app: rebom
spec:
  selector:
    app: rebom
    name: rebom-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
